fix : change labels alignment

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -291,8 +291,9 @@ body {
             font-family: shabnam;
             font-size: 1rem;
             display: block;
+            float: right;
             color: color(quternary);
-            margin-bottom: 0.25rem;
+            margin-bottom: 0.5rem;
 
             @include responsive(md)  {
                 font-size: 0.9rem;
@@ -317,11 +318,14 @@ body {
 
         &-checkbox {
             display: flex;
+            flex-direction: row-reverse;
+            float: right;
+            margin-bottom: 0.75rem;
 
             input {
                 width: 0.75rem;
                 height: 0.75rem;
-                margin-right: 0.5rem;
+                margin-right: 0;
 
                 @include responsive(md) {
                     width: 0.75rem;
